# bevy_knight

./: Cargo.toml  README.md  rustfmt.toml
assets/map/: map.tmx
src/: constants.rs  lib.rs  main.rs
src/camera/: plugin.rs
src/knight/: events.rs  plugin.rs
src/knight/components/: knight.rs
src/knight/systems/: collision.rs  input.rs  mod.rs  spawn.rs
src/level/: plugin.rs
src/level/components/: tile.rs
src/load/: mod.rs  plugin.rs  sprites.rs
src/player/: plugin.rs
